增加部分数学问题和蓝牙2.0的android应用解析

--- a/math.org
+++ b/math.org
@@ -189,6 +189,9 @@ plt.show()                      #显示出来
 **** 几何分布
 *** 连续分布
 **** 正太分布
+- 概率密度：设连续型随机变量X具有概率密度如下，则称X服从参数为\(\mu, \sigma\)的正态分布，记为\(N(\mu, \sigma^{2})\)
+  $$ p(x) = \frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^{2}}{2\sigma^{2}}}, -\infty<x<\infty $$
+- 分布函数： $$ F(x)=\frac{1}{\sqrt{2\pi}\sigma}\int_{-\infty}^{x}e^{-\frac{(t-\mu)^{2}}{2\sigma^{2}}}\mathrm{d}t$$ 
 **** 指数分布
 **** \beta分布
 * 统计
@@ -267,12 +270,37 @@ $$ P(h_{i}|D)=\frac{P(D|h_{i})*P(h_{i})}{P(D)}$$
 类的后验概率\(P(\omega_{i}|x)\), 将其划归到后验概率最大的那一类中，这种分类器称为最小错误率贝叶斯分类器，其分类决策规则可表
 示为：
 1. 两类问题中，当\(P(\omega_{i}|x) > P(\omega_{j}|x)\)时，判决\(x \in \omega_{i}\);
-2. 对于多类情况，则当\( P(\omega_{i}|x)=\max\limits_{1\leq j \leqc} P(\omega_{j}|x)\)时，判决\(x\in \omega_{i}\)
+2. 对于多类情况，则当\( P(\omega_{i}|x)=\max\limits_{1\leq j \leq c} P(\omega_{j}|x)\)时，判决\(x\in \omega_{i}\)
 可以发现，上述分类决策规则实为“最大后验概率分类器”，它与“最小错误率分类器”的关系可以简单分析如下：当采用最大后验概率
 分类器时，分类错误的概率为
 $$ P(e) = \int_{-\infty}^{-\infty}P(error, x)\mathrm{d}x$$  
 而 $$ P(error|x) = \sum_{i=1}^{c}P(\omega_{j}|x) - \max\limits_{1\leq j\leq c}P(\omega_{j}|x) $$  因此，\(P(error|x)\)取
 得了最小值， P(e)也取得了最小值，“最大后验概率分类器”与“最小错误率分类器”是等价的。
+*** 最大似然比贝叶斯分类器
+类条件概率\(P(x|\omega_{i})\)称为\(\omega_{i}\)对特征向量x的似然函数，表达了某类别中的样本取某特征值的可能性。由最小错误
+率贝叶斯分类器可知，对于两类问题，当\(P(x|\omega_{i})*P(\omega_{i}) > P(x|\omega_{j})*P(\omega_{j})\)时，判决
+\(x\in\omega_{i}\) 即当 $$ \frac{P(x|\omega_{i})}{P(x|\omega_{j})} > \frac{P(\omega_{j})}{P(\omega_{i})}$$ 时判决
+\(x\in\omega_{i}\) ，那么下面式子称为 _似然比_ 。 $$ L_{ij}(x) = \frac{P(x|\omega_{i})}{P(x|\omega_{j})}$$
+它与待识别的特征向量有关，而下面式子称为 _判决门限_ 。$$ \theta_{ij}=\frac{P(\omega_{j})}{P(\omega_{i})}$$
+它仅与两类的先验概率有关；对于多类问题，分类决策规则为若 \(L_{ij}(x) > \theta_{ij}\)对于任意的\(i，j=1,2...c, i\neq j\)
+成立，则\(x\in \omega_{i}\)。 
+*** 最小风险贝叶斯分类器
+在最小错误率贝叶斯分类器分类器中，仅考虑了样本属于每一类的后验概率就做出了分类决策，而没有考虑每一种分类决策的风险。事实
+上，在许多模式识别问题中，即时样本属于两类的后验概率相同，将其分到每一类中所带来的风险也会有很大差异。
+例如针对某项检测指标进行癌症的诊断，如果计算出患者患癌症和未患癌症的后验概率均为 50%，如果患者真实情况是患了癌症，此时做出未患癌症的诊
+断会延误治疗时机，比做出患癌症的诊断带来更为严重的后果。
+因此，在获得样本属于每一类的后验概率后，需要综合考虑做出各种分类决策所带来的风险，选择风险最小的分类决策，称为最小风险贝叶斯分类器。
+先定义以下几个概念：
+1. 决策\(\alpha_{i}\):把待识别样本x归到\(\omega_{i}\)中；
+2. 损失\(\lambda_{ij}\):把真实属于\(\omega_{j}\)类的样本x归到\(\omega_{i}\)类中带来的损失；
+3. 条件风险\(R(\alpha_{i}|x)\):对x采取决策\(\alpha_{i}\)后可能的风险；
+条件风险可以用采取某项决策的加权平均损失来计算，权值为样本属于各类的概率，即
+$$ R(\alpha_{i}|x)=E[\lambda_{ij}]=\sum_{j=1}^{c}\lambda_{ij}P(\omega_{j}|x),i=1,2...,c$$
+则最小风险贝叶斯分流器的分类决策规则为
+若
+$$ R(\alpha_{k}|x) = \min\limits_{i=1,2...c}R(\alpha_{i}|x)$$ 
+则
+$$ x\in \omega_{k}$$ 
 *** 朴素贝叶斯
 朴素贝叶斯：是在贝叶斯分类基础上，基于一个简单的假定：给定目标值时属性之间相互条件独立，这样可以简化似然概率的计算。朴素
 贝叶斯理论经典应用是垃圾邮件分类：给定一封邮件，判定它是否属于垃圾邮件。用D来表示这封邮件，注意D由N个单词组成。我们用h+
