--- a/math.org
+++ b/math.org
@@ -88,7 +88,9 @@
   实数称为 \alpha 的 _范数_ , 记为||\alpha||，几范数就是元素几次方的和，除以维数；
 * 概率
 ** 概念
-- 样本空间：随机试验的所有可能结果组成的集合;
+- 样本空间：随机试验的所有可能结果组成的集合，在表示时一般一行的数据表示一个样本，一列的数据表示一个属性(或维度)的数据，
+  例如X, Y是两个属性(维度)，有样本\(x_{1}=(1, 2)^{T}, x_{2}=(3, 6)^{T}, x_{3}=(4, 2)^{T}, x_{4}=(5, 2)^{T}\), 则X表示x轴
+  可能出现的数，Y表示Y轴可能出现的数，所以X，Y维度的数据为\(X=(1, 3, 4, 5)^{T}, Y=(2, 6, 2, 2)^{T}\); 
 - 随机变量：打靶打入XY坐标系，打入的位置是个二维随机变量(x, y), 随机变量不是一个概率;随机变量分为：
   1. 离散随机变量：只能取有限个值，虽然可以是无穷多的，但是是离散化的；
   2. 连续型随机变量：可以取无穷多的连续值；
@@ -127,13 +129,14 @@
   是条件概率，P(交通事故|堵车)，这是由果求因；
 - 期望值：也称均值，$\overline{X} = \frac{\sum_{i=1}^{n} X_{i}}{n}$, 如果知道每个点x的概率f(x)，则可以写为 $E(X) = \sum
   x_{k}f(x_{x})$, 描述的是样本集合的中间点，平均值；
-- 方差：标准差为方差的开方，令u=E(X)为均值，定义X的方差Var(X)=E((X-u)^2)=E(X^2)-u^2, 另外还可以这样计算，方差
+- 方差：标准差为方差的开方，令u=E(X)为均值，定义X的方差Var(X)=E((X-u)^2)=E(X^2)-u^2, 另外针对样本集还可以这样计算，方差
   $V^{2}=\frac{\sum_{i=1}^{n}(X_{i}-\overline{X})}{n-1}$ , 描述了各个点x相对于均值的离散度；
 - 协方差：期望值和方差一般用来描述一维的数据，但是当两个,多个随机变量可能存在一定关系时, 比如男孩的猥琐程度和受女孩子喜
   欢的程度，就需要协方差来衡量，方差只可能为非负，但是协方差可以为正、0、负，从而引出了正相关、相互独立、负相关，如果协
   方差为正，代表男孩越猥琐越受欢迎，如果为负代表男孩越猥琐越不受欢迎，如果为0代表两者无关。协方差的定义公式类似方差
   $cov(X,Y) = \frac{\sum_{i=1}^{n}(X_{i}-\overline{X})(Y_{i}-\overline{Y})}{n-1}$; 如果面对多维的情况时，协方差也没法独
-  自描述，这时就需要协方差矩阵进行描述矩阵的元素为两两随机变量的协方差，比如数据集有{x，y，z}三个维度情况; 
+  自描述，这时就需要协方差矩阵进行描述矩阵的元素为两两随机变量的协方差, 协方差矩阵是描述不同维度间的协方差关系, 而不是不
+  同样本间的关系，一般样本数据集，一行表示一个样本，一列表示一个属性，在计算协方差矩阵时必须以列为计算;   
 #<<math-relevance>>
 - 总体线性相关系数: X和Y的总体线性相关系数,其中Var(X)，Var(Y)为X,Y的方差，Cov(X, Y)为X和Y的协方差； 
   $$ \rho = \frac{Cov(X,Y)}{\sqrt{Var(X)Var(Y)}}$$
@@ -190,8 +193,19 @@ plt.show()                      #显示出来
 *** 连续分布
 **** 正太分布
 - 概率密度：设连续型随机变量X具有概率密度如下，则称X服从参数为\(\mu, \sigma\)的正态分布，记为\(N(\mu, \sigma^{2})\)
-  $$ p(x) = \frac{1}{\sqrt{2\pi}\sigma}e^{-\frac{(x-\mu)^{2}}{2\sigma^{2}}}, -\infty<x<\infty $$
-- 分布函数： $$ F(x)=\frac{1}{\sqrt{2\pi}\sigma}\int_{-\infty}^{x}e^{-\frac{(t-\mu)^{2}}{2\sigma^{2}}}\mathrm{d}t$$ 
+  $$ p(x) = \frac{1}{\sqrt{2\pi}\sigma}\exp^{-\frac{(x-\mu)^{2}}{2\sigma^{2}}}, -\infty<x<\infty $$
+- 分布函数： $$ F(x)=\frac{1}{\sqrt{2\pi}\sigma}\int_{-\infty}^{x}\exp^{-\frac{(t-\mu)^{2}}{2\sigma^{2}}}\mathrm{d}t$$
+- 多维正太分布：考虑n维标准正太随机向量\(X=(X_{1}, X_{2}, ..., X_{n})^{T}\sim N(O, \Sigma)\), 其中\(O=(0, 0, ...)^{T}\)
+  为n维零向量，协方差矩阵(见上面的定义)\(\Sigma=(\sigma_{ij})_{n\times{n}}\)为正定型，\(\sigma_{ii}=1(i=1, 2, ...,n)\). 
+  X的概率密度如下，其中\(\Sigma\)表示协方差矩阵, 并且它不是求和符号而是西格玛， \(\Sigma\)表示协方差矩阵的行列式，
+  \(\Sigma^{-1}\)表示协方差矩阵的逆，\(\mu\)表示X向量各维度下的期望，也就是说，最终\(N(x|\mu, \Sigma)\)也将是一个和X一样
+  维度的向量。 
+  $$ N(x|\mu, \Sigma)=\frac{1}{(2\pi)^{\frac{n}{2}}|\Sigma|^{\frac{1}{2}}}\exp^{-\frac{(x-\mu)^{T}\Sigma^{-1}(x-\mu)}{2}}$$ 
+  $$ f(x_{1}, x_{2}, ..., x_{n})=N(x|\mu, \Sigma), x=(x_{1}, x_{2}, ..., x_{n})^{T}\in R^{n}$$ 
+  X的分布函数表示如下, 其中\(\mathrm{d}x=dx_{1}dx_{2}...dx_{n},a=(a_{1},a_{2},...,a_{n})^{T}，n=(x|x_{1}\leq{a_{1}},...)\), 
+  另外\(\int_{n}\)是一个n重积分。这样积出来的\(F(a_{1}, a_{2}, ..., a_{n})\), 是一个数，一个概率值。
+  $$ F(a_{1}, a_{2}, ..., a_{n})=\int_{n}f(x_{1}, x_{2}, ..., x_{n})\mathrm{d}x$$ 
+  
 **** 指数分布
 **** \beta分布
 * 统计
