--- a/math.org
+++ b/math.org
@@ -96,7 +96,8 @@
   2. 连续型随机变量：可以取无穷多的连续值；
 - 概率函数：对于随机变量X的概率叫概率函数: $$ p_{i} = P(X = a_{i}), i = 1,...,n $$ 
 - 概率分布：概率函数给出了全部概率1是如何在其可能值之间分配的,  _其实可以将概率分布和概率函数等同认识_ ；
-- 分布函数： _可以认为是概率函数在区间段的求和_ , 设X为一随机变量，则分布函数为 $$P(X \leq x) = F(x), -\infty < x < \infty$$   
+- 分布函数： _可以认为是概率函数在区间段的求和_ , 设X为一随机变量，则分布函数为 $$P(X \leq x) = F(x), -\infty < x < \infty$$
+- 联合分布：随机变量X和Y的联合分布是设(X,Y)是二维随机变量，对于任意实数x, y; 二元函数\(F(x, y)=P{X<x\cap Y<y}=P(X<=x,Y<=y)\)
 - 概率密度函数：如果对于随机变量X的分布函数F(x),存在非负可积函数f(x)，使对于任意实数x有 
   $$F(x) = \int_{\infty}^{x}f(t)dt $$ 则f(x)称为X的概率密度函数，简称概率密度, 只有在x点处连续，才有f(x)=F'(x)； 
 - 等可能概型中事件A的计算公式： $$P(A) = \sum_{j=1}^{k}P({e_{i_{j}}})=\frac{k}{n}=\frac{A包含的基本事件数}{S中基本事件的总数} $$
@@ -158,10 +159,33 @@
   获得多个u，对于这么多个u，其实也是一个随机变量，如果这个随机变量的期望值等于总体空间的U，则可以说对我们划分的样本空间，
   可以对总体空间的期望值做无偏估计；官方语言组织叫，参数的样本估计值的期望值等于参数的真实值。估计量的数学期望等于被估计
   参数，则称此为无偏估计 ；
+- 中心极限定理：对于独立的随机变量序列\(X_{1}, X_{2}...X_{n}\), 不管X_{i}服从什么分布，只要它们是同分布，且有有限的数学
+  期望\(E(X_{i})=\mu\)和方差\(D(X_{i})=\sigma^{2}\)那么，当n充分大时, 其服从的分布如下，并且还可以转换成标准正态分布。
+  $$ \sum_{i=1}^{n}X_{i} \sim N(n\mu, n\sigma^{2})$$ 
 ** 排列组合
 - 排列：n个相异事物取r个(1<=r<=n)的不同排列总数，为 $P_{r}^{n} = n(n-1)(n-2)...(n-r+1)$ , 如果r=n，则 $P_{r}^{r} = r!$
 - 组合：n个相异物件取r个(1<=r<=n)的不同组合总数，为 $C_{r}^{n}=\frac{P_{r}^{n}}{r!}=\frac{n!}{r!(n-r)!}$
 - 0!=1; 
+** 期望方差
+*** 期望
+# <<probability-expectation>>
+数学期望包含了几个定理和性质。
+- 设Y是随机变量X的函数：\(Y=g(X)\) , g是连续函数，则有
+  1. 如果X是离散型随机变量，它的分布律\(P{X=x_{k}}=p_{k}, k=1, 2, ...,\)若\(\sum_{k=1}^{\infty}g(x_{k})p_{k}\)绝对收敛，
+     则有;  $$ E(Y)=E[g(X)]=\sum_{k=1}^{\infty}g(x_{k})p_{k}$$ 
+  2. 如果X是连续型随机变量，它的概率密度为f(x)，若\(\int_{-\infty}^{\infty}g(x)f(x)\mathrm{d}x\)绝对收敛，则有; 
+     $$ E(Y)=E[g(X)]=\int_{-\infty}^{\infty}g(x)f(x)\mathrm{d}x$$
+- 设C是常数，则有\(E(C)=C\) ;
+- 设X是随机变量，C是常数，则有\(E(CX)=CE(X)\);
+- 设X，Y是两个随机变量，则有\(E(X+Y)=E(X)+E(Y)\), 可以推广到无限多个随机变量;
+- 设X，Y是两个相互独立的随机变量，则有\(E(XY)=E(X)E(Y)\), 可以推广到无限多个随机变量.
+*** 方差
+# <<probability-variance>>
+数学方差包含了几个定理和性质。
+- 随机变量X的方差计算公式：\(D(X)=E(X^{2})-[E(X)]^{2}\);
+- 设C是常数，则D(C)=0;
+- 设X是随机变量，C是常数，则有\(D(CX)=C^{2}D(X), D(X+C)=D(X)\);
+- 设X, Y是两个随机变量，则有\(D(X+Y)=D(X)+D(Y)+2E{(X-E(X))(Y-E(Y))}\), 特别的，若X, Y相互独立，则有\(D(X+Y)=D(X)+D(Y)\); 
 ** 概率分布
 *** 离散分布
 **** 01分布
@@ -169,6 +193,7 @@
 **** 二项分布
 - 定义：服从二项分布的随机变量X表示在n个独立的是/非试验中成功的次数i，其中每次试验的成功概率为p
   $$ p_{i} = C_{n}^{i}p^{i}(1-p)^{n-i},i=0, 1, ..., n $$
+- 多项式分布:二项分布表示有两种状态类似扔硬币，多项式分布表示有多个状态类似扔色子，
 ***** python实现
 #+begin_src python
 from scipy import stats         #倒入工具包
@@ -248,8 +273,44 @@ plt.show()                      #显示出来
 - 损失函数：loss function，指我们的估计模型的输出值y与真实值之间的偏差，x是输入数据，y(x)是推测出结果的模型，t是x对应的
   真实结果，y(x)是t的估计值，则损失函数表示为L(t, y(x)), 我们常用的损失函数有平方差函数
   $$ L(t, y(x)) = [y(x)-t]^{2}$$ 通常在进行度量时，使用损失函数的平均值E(L)来衡量
-  $$ E(L) = \iint L(t, y(x))p(y,x)\mathrm{d}x\mathrm{d}y$$ 
-  
+  $$ E(L) = \iint L(t, y(x))p(y,x)\mathrm{d}x\mathrm{d}y$$
+- 密度估计：也叫概率密度估计，只通过样本数据估计出概率密度函数的参数，从而知道概率密度；
+** 估计量评估
+对于一般情况下，随机变量都会服从正太分布\(N(\mu, \sigma^{2})\)，令其概率密度为p(x).则log似然函数为
+$$ L(\mu,\sigma|\chi)=-\frac{N\log(2\pi)}{2}-N\log\sigma-\frac{\sum_{t}(x^{t}-\mu)^{2}}{2\sigma^{2}}$$ 分布对参数求偏导
+并令其等于0，可以得到\(\mu, \sigma^{2}\)的似然估计量。
+$$ m=\frac{\sum_{t}x^{t}}{N}$$ 
+$$ s^{2}=\frac{\sum_{t}(x^{t}-m)^{2}}{N}$$ 
+对一个已知概率分布的模型进行估计时，一般需要估计这个概率模型的一些参数，以\(\theta\)表示，我们通过采集的样本估计的量设为 
+\(d=d(X)\), 怎样知道这个估计量的质量如何，我们可以通过计算\(d, \theta\)相差多少，具体为\((d(X)-\theta)^{2}\), 然而由于
+\(d(X)\)也是随机变量，所以需要在整个X空间取其平均值，这样就有了均方误差的定义. $$ r(d, \theta)=E[(d(X)-\theta)^{2}]$$ 
+并且定义\(\theta\)的偏置量为 $$ b_{\theta}(d)=E[d(X)]-\theta$$ 
+如果对于所有的\(\theta\)有\(b_{\theta}=0\)，则称d是\(\theta\)的无偏估计量。比如当从一些期望值为\(\mu\)的概率密度中获得的
+样本\(x^{t}\), 样本的平均值m就是期望\(\mu\)的无偏估计，因为
+$$ E[m]=E[\frac{\sum_{t}x^{t}}{N}]=\frac{\sum_{t}E[x^{t}]}{N}=\frac{N\mu}{N}=\mu$$ 
+这就是说，对于一个特定采样，m可能不等于\(\mu\), 但是如果做了足够多次的采样\(\chi_{i}\)，其相应的估计量
+\(m_{i}=m(\chi_{i})\) 也就是均值将逐渐接近\(\mu\).m也是个一致估计量，也就是说当\(N\to \infty\)时\(Var(m)\to 0\)因为
+$$ Var(m)=Var(\frac{\sum_{t}x^{t}}{N})=\frac{\sum_{t}Var(x^{t})}{N^{2}}=\frac{N\sigma^{2}}{N^{2}}=\frac{\sigma^{2}}{N}$$
+也就是说当我们采样越多(N越大)，m偏离\(\mu\)越小。同时也进一步说了m是\(\mu\)的无偏估计量。那么对于“方差”呢？
+\(s^{2}\)是\(\sigma^{2}\)的最大似然估计量 
+$$ s^{2}=\frac{\sum_{t}(x^{t}-m)^{2}}{N}=\frac{\sum_{t}(x^{t})^{2}-Nm^{2}}{N}$$ 这样有如下式子，这里用到了独立随机变量的
+几个[[probability-expectation][性质]]。
+$$ E[s^{2}]=\frac{\sum_{t}E[(x^{t})^{2}]-N*E[m^{2}]}{N}$$  
+考虑到\(Var(X)=E[X^{2}]-E[X]^{2}\), 就有\(E[X^{2}]=Var(X)+E[X]^{2}\)可以得到\(E[(x^{t})^{2}]=\sigma^{2}+\mu^{2}\)和
+\(E[m^{2}]=\frac{\sigma^{2}}{N}+\mu^{2}\), 带入后就得
+$$ E[s^{2}]=\frac{N(\sigma^{2}+\mu^{2})-N(\sigma^{2}/N + \mu^{2})}{N}=(\frac{N-1}{N})\sigma^{2}\neg\sigma^{2}$$ 
+这也表明\(s^{2}\)是\(\sigma^{2}\)的有偏估计，\(\frac{N}{N-1}s^{2}\)才是\(\sigma^{2}\)的无偏估计。然而当N足够大时，差异就
+不明显了。这被称为 _渐进无偏估计量_ 。
+均方误差可以推导如下。
+$$ r(d,\theta)=E[(d-\theta)^{2}]=E[(d-E[d]+E[d]-\theta)^{2}]=E[(d-E[d])^{2}+(E[d]-\theta)^{2}+2(E[d]-\theta)(d-E[d])]$$ 
+考虑到[[probability-expectation][性质]],得
+$$ E[(d-E[d])^{2}]+E[(E[d]-\theta)^{2}]+2E[(E[d]-\theta)(d-E[d])]$$ 
+由于上面说了E[d]是无偏估计量，可以看做不与\(x^{t}\)相关的常数，\(\theta\)也可以看做同样的常数，所以得
+$$ E[(d-E[d])^{2}]+(E[d]-\theta)^{2}+2(E[d]-\theta)E[d-E[d]]$$ 
+又因为\(E[d-E[d]]=E[d]-E[d]=0\)，得
+$$ E[(d-E[d])^{2}]+(E[d]-\theta)^{2}$$ 
+其中第一项可以看做方差，表示每一个采样空间的\(d_{i}\)偏离我们期望的值的情况，而第二项又表示我们期望的值偏离真实值的情况。
+这样我们可以将均方误差写作 $$ r(d, \theta)=Var(d)+(b_{\theta}(d))^{2}$$ 
 ** 贝叶斯分类
 可以通过一个例子先明确先验概率，后验概率的具体情况：如果有一所学校，有60%是男生和40%是女生。女生穿裤子与裙子的数量相同；
 所有男生穿裤子。一个观察者，随机从远处看到一名学生，观察者只能看到该学生穿裤子。那么该学生是女生的概率是多少？这里题目中
@@ -331,4 +392,4 @@ $$ P(d1|h+) * P(d2|d1, h+) * P(d3|d2,d1, h+) * .. $$
 进一步使用一个更激进的假设，假设d_{i} 与 d_{i-1}是完全条件无关的，于是式子就简化为 
 $$ P(d1|h+) * P(d2|h+) * P(d3|h+) * ..$$ 这个就是所谓的条件独立假设，也正是朴素贝叶斯方法的朴素之处。而计算该式子比较简
 单，只要统计d_{i}这个单词在垃圾邮件中出现的频率即可。
-
+ 
