--- a/math.org
+++ b/math.org
@@ -275,6 +275,10 @@ plt.show()                      #显示出来
   $$ L(t, y(x)) = [y(x)-t]^{2}$$ 通常在进行度量时，使用损失函数的平均值E(L)来衡量
   $$ E(L) = \iint L(t, y(x))p(y,x)\mathrm{d}x\mathrm{d}y$$
 - 密度估计：也叫概率密度估计，只通过样本数据估计出概率密度函数的参数，从而知道概率密度；
+- AIC：akaike information criterion，也叫赤池信息准则，是衡量统计模型拟合优良性的一种标准，又由与它为日本统计学家赤池弘
+  次创立和发展的，因此又称赤池信息量准则。它建立在熵的概念基础上，可以权衡所估计模型的复杂度和此模型拟合数据的优良性。在
+  一般的情况下，AIC可以表示如下, 其中k是参数的数量，L是似然函数.  $$ AIC=2k-2ln(L)$$
+- BIC: bayesian information criterion, 贝叶斯信息量. $$ -2ln(L)+ln(n)*k $$ 
 ** 估计量评估
 对于一般情况下，随机变量都会服从正太分布\(N(\mu, \sigma^{2})\)，令其概率密度为p(x).则log似然函数为
 $$ L(\mu,\sigma|\chi)=-\frac{N\log(2\pi)}{2}-N\log\sigma-\frac{\sum_{t}(x^{t}-\mu)^{2}}{2\sigma^{2}}$$ 分布对参数求偏导
@@ -309,8 +313,12 @@ $$ E[(d-E[d])^{2}]+E[(E[d]-\theta)^{2}]+2E[(E[d]-\theta)(d-E[d])]$$
 $$ E[(d-E[d])^{2}]+(E[d]-\theta)^{2}+2(E[d]-\theta)E[d-E[d]]$$ 
 又因为\(E[d-E[d]]=E[d]-E[d]=0\)，得
 $$ E[(d-E[d])^{2}]+(E[d]-\theta)^{2}$$ 
-其中第一项可以看做方差，表示每一个采样空间的\(d_{i}\)偏离我们期望的值的情况，而第二项又表示我们期望的值偏离真实值的情况。
-这样我们可以将均方误差写作 $$ r(d, \theta)=Var(d)+(b_{\theta}(d))^{2}$$ 
+其中第一项可以看做方差，表示每一个采样空间的\(d_{i}\)偏离我们期望的值的情况，而第二项又表示我们期望的值偏离真实值的情况，
+即偏置。这样我们可以将均方误差写作如下 $$ r(d, \theta)=Var(d)+(b_{\theta}(d))^{2}$$ 
+如果偏置大，代表欠拟合，如果我们的模型复杂度增大(多项式阶数增加)，偏置会逐渐下降，最终完全适应训练集样本；
+如果方差大，代表过拟合，如果我们的模型复杂度增大(多项式阶数增加)，从总体上看方差会逐渐上升；
+总的误差由偏置和方差构成，随着模型复杂度由低到高增加，由偏置造成误差占主导地位逐渐变成由方差造成误差占主导地位，所以对于
+模型选择时，需要考虑总的误差达到最小，则这个模型就是最优模型选择。
 ** 贝叶斯估计
 贝叶斯估计指对于一个已知概率分布的事件，需要通过我们采集到的样本空间来估计这些概率分布的参数\(\theta\)，也就是后验概率，
 一般这些概率分布的参数可以有一些先验信息，当我们得到采集样本后能够更准确的推测这些参数。而通过贝叶斯估计方法来确定这些参
